name:                matasano
version:             0.0.0
synopsis:            Answers to the matasano challenge
homepage:            https://github.com/matthieubulte/matasano
license:             MIT
author:              Matthieu Bulté
maintainer:          matthieu.bulte.06@gmail.com
category:            Crypto
build-type:          Simple
cabal-version:       >=1.8

executable matasano
  main-is:             Main.hs
  build-depends:       base ==4.7.*
                     , bytestring ==0.10.6.0
                     , base64-bytestring ==1.0.0.1
                     , base16-bytestring ==0.1.1.6
                     , containers ==0.5.5.1
